# lins

./: .gitignore  FileSystemWatchdog.py  LICENSE  README.md  Settings.py  main.py  pyproject.toml
images/: get_images.sh
src/: ConfiguratorGUI.py  ConfigureLins.py  FileSystemWatchdog.py  ImageHandler.py  RunLins.py  ScreenInfo.py  Settings.py  Window.py  lins.py  main.py
src/GUI_Elements/: AskPath.py  DropdownListAllDisplays.py  Entries.py  LaunchSlideshowButton.py  ShowDisplayIndex.py  ShowDisplayIndexButton.py
