[tool.poetry]
name = "live-slideshow"
version = "0.1.0"
description = ""
authors = ["Cédric Uden <cedric@uden.de>"]

[tool.poetry.dependencies]
python = "^3.9"
Pillow = "^8.3.1"
watchdog = "^2.1.3"
screeninfo = "^0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
